# peafowl

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  COPYING  Makefile  README.md  README.rst  README_ADVANCED.md  TODO  peafowl.files  peafowl.includes  setup.py  submodules_init.py
FastFlow/.svn/: all-wcprops  entries
FastFlow/ff/.svn/: entries
FastFlow/ff/d/.svn/: all-wcprops
cmake/: CTestCustom.cmake  clang_format.cmake  cppcheck.cmake  gtest_download.cmake.in
cmake/modules/: CodeCoverage.cmake  FindClangFormat.cmake  FindPCAP.cmake  Findcppcheck.cmake  Findcppcheck.cpp
data/: tags_http_headers.json  tags_http_url.json
demo/: CMakeLists.txt  Makefile  demo_identification.c  demo_jpeg.c
demo/EYE/: CMakeLists.txt  peafowl_eye.c
demo/demo_jpeg_dump/: README.md
demo/dns_extraction/: CMakeLists.txt  dns_extraction.c
demo/dump_jpeg/: CMakeLists.txt  Makefile  dump_jpeg.c
demo/dynamic_reconfiguration/: Makefile  dynamic_reconfiguration.c  plot.gnuplot  run.sh
demo/flows_summary/: CMakeLists.txt  flows_summary.c  flows_summary.cpp  flows_summary.py
demo/http_pattern_matching/: CMakeLists.txt  Makefile  http_pm_mc.cpp  http_pm_mc_pfring.cpp  http_pm_seq.cpp
demo/http_pattern_matching/pattern_matching_lib/: Doxyfile  Makefile  Makefile~  buffer.cc  buffer.h  signatures.cc  signatures.h  timer.cc  timer.h  trie.cc  trie.h
demo/protocol_identification/: CMakeLists.txt  Makefile  protocol_identification.c  protocol_identification.py
demo/protocol_identification_mc/: CMakeLists.txt  Makefile  protocol_identification.cpp
demo/quic_extraction_nfq/: .quic_extraction_nfq.c.swp  CMakeLists.txt  config-firewall  quic_extraction_nfq.c
demo/quic_extraction_pcap/: CMakeLists.txt  quic_extraction_pcap.c
demo/rtcp_extraction/: CMakeLists.txt  rtcp_extraction.c
demo/rtp_extraction/: CMakeLists.txt  rtp_extraction.c
demo/sip_extraction/: CMakeLists.txt  Makefile  sip_extraction.c
demo/ssl_extraction/: CMakeLists.txt  ssl_extraction.c
demo/ssl_ja3/: CMakeLists.txt  ssl_ja3.c
docs/: Doxyfile.in  Doxyfile.in.c  Doxyfile.in.cpp  Makefile  api.rst  apic.rst  apicpp.rst  apipython.rst  basic.rst  build.rst  conf.py  configuration.rst  customize.rst  fields.rst  flows.rst  index.rst  introduction.rst  make.bat  newfields.rst  newprotocols.rst  protocols.rst  requirements.txt  userguide.rst
docs/_templates/autosummary/: base.rst  class.rst  module.rst
experiments/: README.md
experiments/dynamic_reconfiguration/: Makefile  dynamic_reconfiguration.c  dynamic_reconfiguration.cpp  rates.txt  run.py  run.sh  stats.txt
experiments/dynamic_reconfiguration_live/: Makefile  receiver.c  sender.cpp
experiments/energy_consumption/: Makefile  energy_consumption.c  model.sh  plot.gnuplot  run.sh  separate.sh  signatures.example
experiments/protocol_identification_inmemory/: Makefile  protocol_identification.cpp
include/peafowl/: api.h  config.h  flow_table.h  hash_functions.h  ipv4_reassembly.h  ipv6_reassembly.h  l7_sub_rules.h  mc_api.h  peafowl.h  peafowl.hpp  peafowl_mc.h  prometheus.h  reassembly.h  tcp_stream_management.h  utils.h  worker.hpp
lib/: README.md
src/: CMakeLists.txt  Makefile  api.c  api.h  config.h  energy_utils.c  energy_utils.h  fields_support.c  fields_support.cpp  flow_table.c  flow_table.cpp  flow_table.h  generate_fields_enum.py  generate_fields_names.py  hash_functions.cpp  hash_functions.h  ipv4_reassembly.cpp  ipv4_reassembly.h  ipv6_reassembly.cpp  ipv6_reassembly.h  mc_api.cpp  mc_api.h  mc_dpi_api.h  parsing_l2.c  parsing_l3.c  parsing_l4.c  parsing_l7.c  parsing_l7_sub.cpp  peafowl.c  peafowl.cpp  peafowl_l2_parsing.c  peafowl_l3_l4_parsing.c  peafowl_l3_parsing.c  peafowl_l4_parsing.c  peafowl_l7_parsing.c  peafowl_mc.cpp  peafowl_py.cpp  prometheus.cpp  prometheus.h  reassembly.cpp  (+8 more)
src/fastflow/ff/.svn/: all-wcprops
src/fastflow/ff/atomic/.svn/: entries
src/fastflow/ff/d/.svn/: entries
src/inspectors/: Makefile  bgp.c  bitcoin.c  dhcp.c  dhcpv6.c  dns.c  dropbox.c  ethereum.c  ethereum.cpp  git.c  hangout.c  http.c  http_parser_joyent.c  http_parser_joyent.h  imap.c  inspectors.h  jsonrpc.cpp  kerberos.c  mdns.c  monero.c  monero.cpp  mqtt.c  mysql.c  ntp.c  pop3.c  protocols_identifiers.h  quic.c  quic5.c  quic_ssl_utils.c  quic_ssl_utils.h  quic_tls13.c  quic_tls13.h  quic_utils.c  quic_utils.h  rtcp.c  rtp.c  sip.c  skype.c  smtp.c  spotify.c  (+11 more)
test/: CMakeLists.txt  Makefile  common.cpp  common.h  installdep.sh  runtests.sh  test802.1Q.cpp  testBGP.cpp  testBitcoin.cpp  testDHCP.cpp  testDHCP6.cpp  testDNS.cpp  testDropbox.cpp  testEthereum.cpp  testFlowTable.cpp  testGeneric.cpp  testGit.cpp  testHTTP-cpp.cpp  testHTTP.cpp  testHangout.cpp  testIMAP.cpp  testIPFragmentation.cpp  testKerberos.cpp  testL3.cpp  testMDNS.cpp  testMPLS.cpp  testMQTT.cpp  testMonero.cpp  testMySQL.cpp  testNTP.cpp  testQUIC.cpp  testQUIC5.cpp  testRTCP.cpp  testRTP.cpp  testSIP.cpp  testSMTP.cpp  testSPLT.cpp  testSSDP.cpp  testSSH.cpp  testSSL.cpp  (+11 more)
test/cppcheck/: suppressions-list.txt
test/gcov/: gcov.sh
test/pcaps/: 802.1Q_dvlan.cap  bitcoin.pcap  dropbox_2.pcapng  ethereum-js-http.pcap  hangout.pcap  http-jpeg.pcap  http-segmented.pcap  imap-ssl.pcapng  imap.cap  ldap-ssl.pcapng  mpls_one.cap  mpls_two.pcap  mqtt-1.pcapng  quic-024-1.pcap  quic-039.pcap  quic-043.pcap  quic-050.pcap  quic-draft27-facebook.pcap  quic-draft29.pcap  rtp.pcap  spotify.pcapng  ssl-4.pcap  whatsapp.pcap
test/pcaps/L3/: 4in4.pcap  6in4.pcap  igmp.pcap  ipv6_hdr_hopbyhop.pcap  rsvp.pcap  truncated_icmp.pcap  truncated_ip.pcap  truncated_tcp.pcap  truncated_udp.pcap
test/pcaps/ip_fragmentation/: 4in4_outer.pcap  6in6_both.pcap  6in6_inner.pcap  correct_1.pcap  overlapping.pcap  teardrop.pcap  teardrop_inverted.pcap
test/pcaps/tcp_resegment/: http_ip_fragmented.pcap  http_ip_fragmented_out_of_order.pcap  http_no_syn.pcap  http_no_syn_synack_ack.pcap  http_out_of_order_1.pcap  http_out_of_order_2.pcap  http_seq_num_wrapping.pcap  http_seq_num_wrapping_out_of_order.pcap
test/tags/: http_body.json  http_headers.json  ja3.json
(+18 files in other folders)
