include_directories(${CMAKE_SOURCE_DIR}/include)
#add_definitions(-g -O0)
add_subdirectory(protocol_identification)
add_subdirectory(dump_jpeg)
add_subdirectory(sip_extraction)
add_subdirectory(dns_extraction)
add_subdirectory(http_pattern_matching)
if (ENABLE_PARALLEL)
    add_subdirectory(protocol_identification_mc)
endif (ENABLE_PARALLEL)

