include_directories(${CMAKE_SOURCE_DIR}/include)
if (PCAP_FOUND)
	link_directories(${PCAP_LIBRARY})
	include_directories(${PCAP_INCLUDE_DIR})
	add_subdirectory(protocol_identification)
	add_subdirectory(dump_jpeg)
	add_subdirectory(sip_extraction)
	add_subdirectory(rtp_extraction)
	add_subdirectory(rtcp_extraction)
	add_subdirectory(dns_extraction)
	add_subdirectory(ssl_extraction)
	add_subdirectory(ssl_ja3)
	add_subdirectory(http_pattern_matching)
	add_subdirectory(flows_summary)
endif(PCAP_FOUND)

if (ENABLE_PARALLEL)
    add_subdirectory(protocol_identification_mc)
endif (ENABLE_PARALLEL)

if (OPENSSL_FOUND)
	#add_subdirectory(quic_extraction_nfq)
	add_subdirectory(quic_extraction_pcap)
endif (OPENSSL_FOUND)
